plugins {
    id 'java-library'
    id 'application'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

group 'com.kousenit'
version '1.0'

application {
    mainClass.set('com.kousenit.fileio.ProcessDictionary')
    applicationDefaultJvmArgs = ['--enable-preview']
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.squareup.moshi:moshi:1.12.0'
    implementation 'com.squareup.moshi:moshi-adapters:1.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation 'net.jqwik:jqwik:1.5.6'
}

tasks.withType(JavaCompile).configureEach {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}
